--- a/VagrAns3/Vagrantfile
+++ b/VagrAns3/Vagrantfile
@@ -13,11 +13,30 @@ Vagrant.configure("2") do |config|
       v.memory = 2048
       v.cpus = 2
     end
+    
+    vagrant1.vm.provision :ansible do |ansible|
+      ansible.limit = "all"
+      ansible.playbook = "nginx.yml"
+      ansible.inventory_path = "inventory"
+    end
+  end
+   
+  config.vm.define "vagrant3" do |vagrant3|
+    vagrant3.vm.box = "ubuntu/bionic64" 
+    vagrant3.vm.hostname = "mysqlserv"
+    vagrant3.vm.network "private_network", ip: "192.168.40.22"
+    vagrant3.vm.network "forwarded_port", guest: 3306, host: 3306
+
+    vagrant3.vm.provider :virtualbox do |v|
+      v.memory = 2048
+      v.cpus = 2
+    end
+
+    vagrant3.vm.provision :ansible do |ansible|
+      ansible.limit = "all"
+      ansible.playbook = "mysqldb.yml"
+      ansible.inventory_path = "inventory"
+    end
   end
   
-  config.vm.provision :ansible do |ansible|
-    ansible.limit = "all"
-    ansible.playbook = "nginx.yml"
-    ansible.inventory_path = "inventory"
-  end
 end
