--- a/VagrAns3/Vagrantfile
+++ b/VagrAns3/Vagrantfile
@@ -20,7 +20,21 @@ Vagrant.configure("2") do |config|
       ansible.inventory_path = "inventory"
     end
   end
-   
+  
+  config.vm.define "vagrant2" do |vagrant2|
+    vagrant2.vm.box = "ubuntu/bionic64" 
+    vagrant2.vm.hostname = "goapp"
+    vagrant2.vm.network "private_network", ip: "192.168.40.21"
+    vagrant2.vm.network "forwarded_port", guest: 8888, host: 8888
+
+    vagrant2.vm.provider :virtualbox do |v|
+      v.memory = 2048
+      v.cpus = 2
+    end
+
+    vagrant2.vm.provision "up", type: "shell", run: "always", inline: "bash /vagrant/main &"    
+  end
+ 
   config.vm.define "vagrant3" do |vagrant3|
     vagrant3.vm.box = "ubuntu/bionic64" 
     vagrant3.vm.hostname = "mysqlserv"
