--- a/VagrAns3/Vagrantfile
+++ b/VagrAns3/Vagrantfile
@@ -32,7 +32,7 @@ Vagrant.configure("2") do |config|
       v.cpus = 2
     end
 
-    vagrant2.vm.provision "up", type: "shell", run: "always", inline: "bash /vagrant/main &"    
+    vagrant2.vm.provision "shell", run: "always", inline: "bash /vagrant/main &"    
   end
  
   config.vm.define "vagrant3" do |vagrant3|
